--- a/CSS/index.css
+++ b/CSS/index.css
@@ -35,7 +35,7 @@ body {
     cursor: pointer;
 }
 
-.popup-content  {
+.popup-content {
     text-align: center;
 }
 
@@ -98,6 +98,12 @@ li img {
     height: auto;
     margin-left: 16%;
     margin-top: 6vh;
+}
+
+.lang-btn {
+    position: absolute;
+    top: 5%;
+    left: 80%;
 }
 
 /*formattazione css del video in Homepage*/
@@ -175,17 +181,22 @@ h2+p {
 
 
 
-.mySlides {display: none;}
-img {vertical-align: middle;}
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
 
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 50%;
-  position: relative;
-  margin: auto;
-  margin-top: 12%;
-  margin-bottom: 7%;
+    max-width: 50%;
+    position: relative;
+    margin: auto;
+    margin-top: 12%;
+    margin-bottom: 7%;
 }
 
 #caroselloSurf {
@@ -194,21 +205,21 @@ img {vertical-align: middle;}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: black;
-  font-size: 60%;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+    color: black;
+    font-size: 60%;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  height: 1.5vw;
-  width: 1.5vw;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    height: 1.5vw;
+    width: 1.5vw;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
 #contenitorePunti {
@@ -226,18 +237,23 @@ h4 {
 
 
 .active {
-  background-color: #717171;
+    background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 
