--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     /* imposta il margine del body a 0px per una maggiore coerenza e controllo del layout */
     /*background-color: #f2ae49;*/
-    background: linear-gradient(to bottom, yellow, orange);
+    background: linear-gradient(to bottom, #fafb16, #f3992c);
 }
 
 /* formattazione popup iniziale */
@@ -94,17 +94,13 @@ li a:hover {
 }
 
 li img {
-    width: 42%;
+    width: 62%;
     height: auto;
-    margin-left: 16%;
+    margin-left: 10%;
     margin-top: 6vh;
+
 }
 
-.lang-btn {
-    position: absolute;
-    top: 5%;
-    left: 80%;
-}
 
 /*formattazione css del video in Homepage*/
 #videoHome {
