--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
      /* imposta il margine del body a 0px per una maggiore coerenza e controllo del layout */
     /*background-color: #f2ae49;*/
-    background: linear-gradient(to bottom, yellow, orange);
+    background: linear-gradient(to bottom, #fafa15, #FFA500);
 }
 
 /*importazione google font*/
@@ -26,7 +26,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: transparent;
-    border-bottom: 2px solid darkorange ;
+    border-bottom: 2px solid #FFA500 ;
     height: 30vh;
     position: fixed;
     z-index: 2;
@@ -40,7 +40,7 @@ li a {
     display: block;
     font-family: dakdo, sans-serif;
     width: 100%;
-    color: darkorange;
+    color: #FFA500;
     text-align: center;
     padding: 1vw 1vw;
     text-decoration: none;
@@ -50,13 +50,13 @@ li a {
     font-weight: bold;
     opacity: 0.8;
     /*effetto opaco */
-    text-shadow: 2px 2px 4px rgb(0, 0, 0);
+    text-shadow: 2px 2px 4px #000000;
     /* effetto ombreggiatura */
     letter-spacing: 0.2vw;
 }
 
 li a:hover {
-    color: yellow;
+    color: #fafa15;
 }
 
 li img {
@@ -70,7 +70,7 @@ li img {
 footer {
     display: flex;
     align-items: center;
-    background-color: black;
+    background-color:#000000;
     height: auto;
     line-height: 1;
     width: 100%;
@@ -81,7 +81,7 @@ footer {
     font-size: 300%;
     font-family: dakdo;
     letter-spacing: 0.2vw;
-    color: white;
+    color: #fff;
 }
 
 
@@ -91,7 +91,7 @@ footer {
     font-size: 150%;
     font-family: nunitoSans, sans-serif;
     font-weight: bold;
-    color: white;
+    color: #fff;
 }
 
 /* formattazione button submit */
@@ -138,7 +138,7 @@ footer {
     font-family: nunitoSans;
     font-size: 100%;
     font-weight: bold;
-    color: whitesmoke;
+    color: #fff;
 }
 
 /* selettore di fratelli adiacenti */
@@ -166,14 +166,14 @@ section+address {
     /* l’elemento sarà spostato verso il 10% della distanza dall’alto rispetto al suo contenitore genitor */
     left: 57%;
     right: 5%;
-    color: yellow;
+    color: #fafa15;
     font-size: 1040%;
     font-family: dakdo;
     font-weight: bolder;
     text-align: right;
     letter-spacing: 0.4vw;
     opacity: 0.90;
-    text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    text-shadow: 5px 5px 8px #000000;
     /* effetto ombreggiatura */
 }
 
@@ -211,7 +211,7 @@ section+address {
     margin-left: 10%;
     margin-bottom: 5%;
     margin-right: 10%;
-    border: 1px solid black;
+    border: 1px solid #000000;
     padding: 15px;
 }
 
@@ -275,7 +275,7 @@ p+h3 {
     bottom: 20px;
     right: 20px;
     /*background-color: darkorange; */
-    color: white;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
