--- a/CSS/corsi.css
+++ b/CSS/corsi.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
      /* imposta il margine del body a 0px per una maggiore coerenza e controllo del layout */
     /*background-color: #f2ae49;*/
-    background: linear-gradient(to bottom, yellow, orange);
+    background: linear-gradient(to bottom, #fafa15, #FFA500);
 }
 
 /*importazione google font*/
@@ -26,7 +26,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: transparent;
-    border-bottom: 2px solid darkorange ;
+    border-bottom: 2px solid #FFA500 ;
     height: 30vh;
     position: fixed;
     z-index: 2;
@@ -40,7 +40,7 @@ li a {
     display: block;
     font-family: dakdo, sans-serif;
     width: 100%;
-    color: darkorange;
+    color: #FFA500;
     text-align: center;
     padding: 1vw 1vw;
     text-decoration: none;
@@ -50,13 +50,13 @@ li a {
     font-weight: bold;
     opacity: 0.8;
     /*effetto opaco */
-    text-shadow: 2px 2px 4px rgb(0, 0, 0);
+    text-shadow: 2px 2px 4px #000000;
     /* effetto ombreggiatura */
     letter-spacing: 0.2vw;
 }
 
 li a:hover {
-    color: yellow;
+    color: #fafa15;
 }
 
 li img {
@@ -82,14 +82,14 @@ li img {
     /* l’elemento sarà spostato verso il 10% della distanza dall’alto rispetto al suo contenitore genitor */
     left: 57%;
     right: 5%;
-    color: yellow;
+    color: #fafa15;
     font-size: 1040%;
     font-family: dakdo;
     font-weight: bolder;
     text-align: right;
     letter-spacing: 0.4vw;
     opacity: 0.90;
-    text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    text-shadow: 5px 5px 8px #000000;
     /* effetto ombreggiatura */
 }
 
@@ -126,7 +126,7 @@ li img {
     display: flex;
     align-items:start;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid #000000;
     padding: 50px;
     margin-left: 15%;
     margin-right: 15%;
@@ -142,6 +142,41 @@ li img {
     text-align: center;
 }
 
+#meteo {
+    display: flex;
+    justify-content: space-between; /* Per distribuire gli elementi su tutta la larghezza */
+    align-items: center; /* Per allineare gli elementi verticalmente */
+   
+    padding: 20px; /* Aggiungi spazio intorno ai contenuti */
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 10%;
+
+}
+
+#iframeContainer {
+    flex: 1; /* L'iframe occupa tutto lo spazio disponibile */
+    margin-right: 20px; /* Aggiungi spazio tra l'iframe e il testo */
+}
+
+
+
+#condizioniMeteo {
+    flex: 1; /* Il testo occupa tutto lo spazio disponibile */
+}
+
+#condizioniMeteo {
+    font-family: dakdo;
+    font-size: 36px;
+    text-align: center;
+}
+
+#condizioniMeteo p {
+    margin: 0; /* Rimuovi il margine predefinito dal paragrafo */
+    text-align: justify;
+    font-family: nunitoSans;
+    font-size: 22px;
+}
 
 
 img {
@@ -231,7 +266,7 @@ add a black background color with a little bit see-through */
 footer {
     display: flex;
     align-items: center;
-    background-color: black;
+    background-color: #000000;
     height: auto;
     line-height: 1;
     width: 100%;
@@ -242,7 +277,7 @@ footer {
     font-size: 300%;
     font-family: dakdo;
     letter-spacing: 0.2vw;
-    color: white;
+    color: #fff;
 }
 
 
@@ -252,7 +287,7 @@ footer {
     font-size: 150%;
     font-family: nunitoSans, sans-serif;
     font-weight: bold;
-    color: white;
+    color: #fff;
 }
 
 /* formattazione button submit */
@@ -299,7 +334,7 @@ footer {
     font-family: nunitoSans;
     font-size: 100%;
     font-weight: bold;
-    color: whitesmoke;
+    color: #fff;
 }
 
 /* selettore di fratelli adiacenti */
@@ -313,8 +348,8 @@ section+address {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    /*background-color: darkorange; */
-    color: white;
+    /*background-color: #FFA500; */
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
