--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     /* imposta il margine del body a 0px per una maggiore coerenza e controllo del layout */
     /*background-color: #f2ae49;*/
-    background: linear-gradient(to bottom, #fafb16, #f3992c);
+    background: linear-gradient(to bottom, #fafa15, #FFA500);
 }
 
 /* formattazione popup iniziale */
@@ -60,7 +60,7 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: transparent;
-    border-bottom: 2px solid darkorange;
+    border-bottom: 2px solid #FFA500;
     height: 30vh;
     position: fixed;
     z-index: 2;
@@ -74,7 +74,7 @@ li a {
     display: block;
     font-family: dakdo, sans-serif;
     width: 100%;
-    color: darkorange;
+    color: #FFA500;
     text-align: center;
     padding: 1vw 1vw;
     text-decoration: none;
@@ -84,13 +84,13 @@ li a {
     font-weight: bold;
     opacity: 0.8;
     /*effetto opaco */
-    text-shadow: 2px 2px 4px rgb(0, 0, 0);
+    text-shadow: 2px 2px 4px #000000;
     /* effetto ombreggiatura */
     letter-spacing: 0.2vw;
 }
 
 li a:hover {
-    color: yellow;
+    color: #fafa15;
 }
 
 li img {
@@ -128,7 +128,7 @@ li img {
     text-align: right;
     letter-spacing: 0.6vw;
     opacity: 0.85;
-    text-shadow: 5px 5px 8px rgb(0, 0, 0);
+    text-shadow: 5px 5px 8px #000000;
     /* effetto ombreggiatura */
 }
 
@@ -201,7 +201,7 @@ img {
 
 /* Number text (1/3 etc) */
 .numbertext {
-    color: black;
+    color: #000000;
     font-size: 60%;
     padding: 8px 12px;
     position: absolute;
@@ -257,7 +257,7 @@ h4 {
 footer {
     display: flex;
     align-items: center;
-    background-color: black;
+    background-color: #000000;
     height: auto;
     line-height: 1;
     width: 100%;
@@ -268,7 +268,7 @@ footer {
     font-size: 300%;
     font-family: dakdo;
     letter-spacing: 0.2vw;
-    color: white;
+    color: #fff;
 }
 
 
@@ -278,7 +278,7 @@ footer {
     font-size: 150%;
     font-family: nunitoSans, sans-serif;
     font-weight: bold;
-    color: white;
+    color: #fff;
 }
 
 /* formattazione button submit */
@@ -325,7 +325,7 @@ footer {
     font-family: nunitoSans;
     font-size: 100%;
     font-weight: bold;
-    color: whitesmoke;
+    color: #fff;
 }
 
 /* selettore di fratelli adiacenti */
@@ -341,7 +341,7 @@ section+address {
     bottom: 20px;
     right: 20px;
     /*background-color: darkorange; */
-    color: white;
+    color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
